# rift

./: AGENTS.md  DESIGN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: index.html
docs/plans/: 2026-04-24-rift-mvp.md
docs/specs/: 2026-04-24-rift-design.md
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/db/: connection.rs  driver.rs  mod.rs  pool.rs  query.rs  ssh_tunnel.rs
src-tauri/src/schema/: mod.rs
src-tauri/src/state/: mod.rs
src/lib/components/: BookmarkPanel.svelte  ChartPanel.svelte  CodeMirrorEditor.svelte  ConnectionList.svelte  ConnectionModal.svelte  CsvImportModal.svelte  ERDiagram.svelte  ExplainPanel.svelte  ProfilePanel.svelte  QueryEditor.svelte  QueryHistory.svelte  ResultGrid.svelte  SchemaTree.svelte  SettingsPanel.svelte  Sidebar.svelte  StatusBar.svelte  TabBar.svelte
src/lib/stores/: bookmark.ts  connection.ts  query.ts  schema.ts  settings.ts  ui.ts
src/lib/types/: index.ts
